<resources>
    <string name="app_name">EventMe</string>

    <string name="header_login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>

    <string name="header_register">Register</string>
    <string name="password_confirm">Retype Password</string>
    <string name="button_register">Register</string>
    <string name="already_have_account">Already have account?</string>

    <string name="error_email_blank">Email cannot be blanked</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_blank">Password cannot be blanked</string>
    <string name="error_password_short">Password is too short</string>
    <string name="error_password_confirm_blank">Password confirmation cannot be blanked</string>
    <string name="error_email_used">Email has been used! please choose another email.</string>
    <string name="error_password_confirm_not_match">Password confirmation is not matched</string>

    <string name="error_event_name_blank">Event name cannot be blank</string>
    <string name="error_event_start_date_blank">Start date cannot be blank</string>
    <string name="error_event_start_time_blank">Start time cannot be blank</string>
    <string name="error_event_end_date_blank">End date cannot be blank</string>
    <string name="error_event_end_time_blank">End time cannot be blank</string>
    <string name="error_event_loc_blank">Event Location cannot be blank</string>
    <string name="error_event_time_conflict">End time cannot be smaller than start time</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="event_name">Event Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>

    <string name="search">Search</string>

    <string name="like">Like</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_event">There are no events found!</string>
    <string name="fake_text">Where does it come from?
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
</resources>
