<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".fragment.LoginFragment"
    style="@style/Container"
    >

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo" />

    <!--<TextView-->
        <!--style="@style/ActivityHeader"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/header_login" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">

        <EditText
            android:id="@+id/login_email"
            style="@style/Edittext"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent">

        <EditText
            android:id="@+id/login_password"
            style="@style/Edittext"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login2"
        style="@style/ButtonPrimary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Create a new account"
        android:textColor="@android:color/white"
        android:textSize="15sp" />
</LinearLayout>