<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="50"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            style="@style/MyToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/textView2"
                style="@style/MyToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create an event"
                android:textSize="34sp" />
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/event_photo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg"
                        tools:src="@drawable/logo222" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_event_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/title"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/event_name"
                            android:inputType="text"
                            android:textColor="@color/colorText" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2">

                                <EditText
                                    android:id="@+id/input_event_start_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:drawableLeft="@drawable/date"
                                    android:drawablePadding="10dp"
                                    android:ems="10"
                                    android:focusableInTouchMode="true"
                                    android:hint="@string/start_date"
                                    android:inputType="none"
                                    android:clickable="true"
                                    android:focusable="false"
                                    android:textColor="@color/colorText" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2">

                                <EditText
                                    android:id="@+id/input_event_start_time"
                                    android:focusableInTouchMode="true"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:drawableLeft="@drawable/time"
                                    android:drawablePadding="10dp"
                                    android:ems="10"
                                    android:hint="@string/start_time"
                                    android:inputType="none"
                                    android:clickable="true"
                                    android:focusable="false"
                                    android:textColor="@color/colorText" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2">

                                <EditText
                                    android:id="@+id/input_event_end_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:drawableLeft="@drawable/date"
                                    android:drawablePadding="10dp"
                                    android:ems="10"
                                    android:hint="@string/end_date"
                                    android:inputType="none"
                                    android:clickable="true"
                                    android:focusable="false"
                                    android:textColor="@color/colorText" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2">

                                <EditText
                                    android:id="@+id/input_event_end_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:drawableLeft="@drawable/time"
                                    android:drawablePadding="10dp"
                                    android:ems="10"
                                    android:hint="@string/end_time"
                                    android:inputType="time"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:textColor="@color/colorText" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_event_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/placeholder"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/location"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/location_autocomplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </android.support.v7.widget.RecyclerView>
                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_event_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/desc"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/description"
                            android:inputType="textMultiLine"
                            android:minLines="2"
                            android:textColor="@color/colorText" />
                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btn_create_event"
                        style="@style/ButtonPrimary"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button"
                        android:text="Create" />

                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</RelativeLayout>